[package]
name = "rdp-rs"
version = "0.1.0"
authors = ["Sylvain Peyrefitte <citronneur@gmail.com>"]
description = "A Pure RUST imlementation of Remote Desktop Protocol"
repository = "https://github.com/citronneur/rdp-rs"
readme = "README.md"
keywords = ["rdp", "security", "network", "windows"]
categories = ["network"]
license = "MIT"
documentation = "https://docs.rs/rdp-rs"
edition = "2021"

[lib]
name = "rdp"
path = "src/lib.rs"

[[bin]]
name = "mstsc-rs"
path = "src/bin/mstsc-rs.rs"
required-features = ["mstsc-rs"]

[features]
default = ["openssl"]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
integration = []
mstsc-rs = ["hex", "winapi", "minifb", "clap", "libc", "openssl", "futures"]
openssl = ["async-native-tls"]

[dependencies]
tokio = { version = "^1", features = ["full"] }
async-native-tls = { version = "^0.4", optional = true, default-features = false, features = ["runtime-tokio"] }
async-trait = { version = "^0.1" }
byteorder = "^1.3"
bufstream = "0.1"
indexmap = "^1.3"
yasna = { version = "^0.4" }
md4 = "^0.9"
hmac = "^0.11"
md-5 = "^0.9"
rand = "^0.8"
num-bigint = "^0.4"
x509-parser = "^0.12"
num_enum = "^0.5"

# for mtsc-rs
hex = { version = "^0.4", optional = true }
winapi = { version = "^0.3", features = ["winsock2"], optional = true }
minifb = { version = "^0.15", optional = true }
clap = { version = "^2.33", optional = true}
libc = { version = "^0.2", optional = true}
futures = { version = "0.3", optional = true }