[package]
name = "rdp-rs"
version = "0.1.0"
authors = ["Sylvain Peyrefitte <citronneur@gmail.com>"]
description = "A Pure RUST imlementation of Remote Desktop Protocol"
repository = "https://github.com/citronneur/rdp-rs"
readme = "README.md"
keywords = ["rdp", "security", "network", "windows"]
categories = ["network"]
license = "MIT"
documentation = "https://docs.rs/rdp-rs"
edition = "2021"

[lib]
name = "rdp"
path = "src/lib.rs"

[[bin]]
name = "mstsc-rs"
path = "src/bin/mstsc-rs.rs"
required-features = ["mstsc-rs"]

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
integration = []
mstsc-rs = ["hex", "winapi", "minifb", "clap", "libc"]

[dependencies]
bufstream = "0.1"
byteorder = "^1.3"
derivative = "2.2.0"
hmac = "^0.12"
indexmap = "^2.1"
md4 = "^0.10"
md-5 = "^0.10"
native-tls = "^0.2"
num-bigint = "^0.4"
num_enum = "0.7.1"
rand = "^0.8"
rasn = "0.11.1"
x509-parser = "0.15.1"

# for mtsc-rs
clap = { version = "^4.4", optional = true, features = ["derive"] }
hex = { version = "^0.4", optional = true }
minifb = { version = "^0.25", optional = true }
thiserror = "1.0.50"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^0.3", features = ["winsock2"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = { version = "^0.2", optional = true}
